<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="100dp"
    android:paddingLeft="100dp"
    android:paddingTop="120dp"

    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll_switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:switchMinWidth="56dp"
            android:text="@string/alarm"
            android:textOff="@string/alarm_is_off"
            android:textOn="@string/alarm_is_on" />

        <TextView
            android:id="@+id/et1"
            android:inputType="time"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/no_time_picked" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_switch2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/switch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:switchMinWidth="56dp"
            android:text="@string/shake"
            android:textOff="@string/shake_is_off"
            android:textOn="@string/shake_is_on" />

        <EditText
            android:id="@+id/et2"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sensibility_to_shake"
            android:textColor="@color/colorAccent"
            android:inputType="numberDecimal|numberSigned"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_switch3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <Switch
            android:id="@+id/switch3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:switchMinWidth="56dp"
            android:text="@string/sleep"
            android:textOff="@string/sleep_is_off"
            android:textOn="@string/sleep_is_on" />

        <EditText
            android:id="@+id/et3"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/degree_to_sleep"
            android:textColor="@color/colorAccent"
            android:inputType="numberDecimal|numberSigned"

            android:textStyle="italic" />
    </LinearLayout>

    <Button
        android:id="@+id/getBtn"

        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"


        android:layout_marginRight="50dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"

        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="135"
        android:text="@string/check_all"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="italic" />

</LinearLayout>